# mom-document-parsing

./: .gitignore  README.md  doc_parsing_test.ipynb  docling_parser_demo.ipynb  new.md  pyproject.toml
document_parser/core/: models.py
document_parser/layout/: row_cluster.py  zone_splitter.py
document_parser/parsers/document/: base_document_parser.py
document_parser/parsers/section/: base_section_parser.py  group_kv_section_parser.py
document_parser/utils/: refs.py  text.py
document_parser_engine/app/: __init__.py
document_parser_engine/app/services/: docling_document_service.py  section_parsing_service.py
document_parser_engine/domain/: __init__.py
document_parser_engine/domain/classifiers/: __init__.py  (+1 more)
document_parser_engine/engine/: parser_factory.py
document_parser_engine/presets/: __init__.py  invoice.py
document_parser_engine/utils/: __init__.py  refs.py
document_parsing_engine/: __init__.py
document_parsing_engine/app/: __init__.py
document_parsing_engine/engine/: __init__.py  document_parsing_engine.py  parser_factory.py
document_parsing_engine/llm/: __init__.py  anthropic_client.py  config.py
document_parsing_engine/loaders/: __init__.py  docling_loader.py
document_parsing_engine/presets/: __init__.py
document_parsing_engine/prompt/: __init__.py  extraction_prompts.yaml  field_mapping.yaml  prompt_maker.py
document_parsing_engine/utils/: text.py
juypter-notebook/: doc_parsing_test.ipynb  docling_parser_demo.ipynb
juypter-notebook/app/: field_mapping.ipynb  layout_segment_mapping.ipynb  segment_reconstruction.ipynb
(+60 files in other folders)
