[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mom-document-parsing"
version = "0.1.0"
description = "Document parsing with Docling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "anthropic>=0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
